# fragments_h5

./: .dockerignore  .gitignore  AGENT_CONTEXT.md  Dockerfile  MANIFEST.in  Makefile  README.md  RELEASE.md  environment.yml  pyproject.toml  pytest.ini  setup.py
conda-build-output/: channeldata.json  index.html
conda-build-output/noarch/: index.html
conda-build-output/osx-arm64/: index.html
conda-recipe/: conda_build_config.yaml  meta.yaml  recipe.yaml  variant_config.yaml
docs/: plan_chunk_based_parallelization.md
fragments_h5/: __init__.py  fragment.py  fragments_h5.py
scripts/: build_conda_package.sh  publish_conda_package.sh
src/fragments_h5/: __init__.py  _logging.py  fragment.py  fragments_h5.py  main.py  sequence.c  sequence.pyx
test/: test_fragment.py  test_fragments_h5.py
test/data/: GRCh38.p12.genome.chr3_99110000_99130000.fa  GRCh38.p12.genome.chr3_99110000_99130000.fa.fai  GRCh38.p12.genome.chr6_99110000_99130000.fa.gz.fai  GRCh38.p12.genome.chr6_99110000_99130000.fa.gz.gzi  scATAC_breast_v1_chr6_99118615_99121634.hg38.bam  small.chr6.bam.bai
tests/: #test_s3_bam.py#  test_create_duplicate_sam.py  test_docker_build.py  test_fragment.py  test_fragments_h5.py  test_s3_bam.py
tests/data/: GRCh38.p12.genome.chr6_99110000_99130000.fa.gz.fai  scATAC_breast_v1_chr6_99118615_99121634.hg38.bam.bai  small.chr6.bam  test_duplicates.bam  test_duplicates.bam.bai
tests/specialized/: compare_chunked_vs_unchunked.py
